--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -45,5 +45,56 @@ body.landing .navbar {
 .selling-points .point p {
   font-size: 14px; }
 
+.album-header-container {
+  margin-top: 55px;
+  margin-bottom: 40px; }
+
+.album-header-information {
+  margin-top: 45px;
+  margin-bottom: 20px; }
+
+.album-header-information h3, .album-header-information h4, album-header-information h5 {
+  line-height: 150%; }
+
+.album-header-information h3 {
+  font-size: 48px;
+  font-weight: 300; }
+
+.album-header-information h4 {
+  font-size: 24px;
+  font-weight: 700; }
+
+.album-header-information h5 {
+  font-size: 16px;
+  font-weight: 500; }
+
+.table.album-song-listing {
+  font-weight: 300; }
+
+.table.album-song-listing td {
+  padding: 20px;
+  border-top: 1px solid rgba(255, 255, 255, 0.4); }
+
+.collection-album-container {
+  margin-top: 30px;
+  margin-bottom: 20px; }
+
+.collection-album-container .caption {
+  margin-top: 10px; }
+
+.collection-album-container .caption p {
+  font-size: 16px;
+  font-weight: 300;
+  color: rgba(255, 255, 255, 0.6); }
+
+.collection-album-container .caption p a {
+  color: rgba(255, 255, 255, 0.6); }
+
+.collection-album-container .caption p a.album-name {
+  color: white; }
+
+.collection-album-container img {
+  max-width: 100%; }
+
 
 /*# sourceMappingURL=app.css.map*/
