--- a/app/assets/templates/collection.html
+++ b/app/assets/templates/collection.html
@@ -15,9 +15,9 @@
           </div>
         </div>
       </div>
-      <div class="collection-album-info caption">
+            <div class="collection-album-info caption">
         <p>
-          <a class="album-name" ui-sref="album"> {{ album.name }} </a>
+        <a class="album-name" ui-sref="album"> {{ album.name }} </a>
           <br/>
           <a ui-sref="album"> {{ album.artist }} </a>
           <br/>
@@ -27,4 +27,5 @@
       </div>
     </div>
   </div>
+  <ng-include src="'/templates/player_bar.html'"></ng-include>
 </div>
